[package]
name = "wasm-webgl"
version = "0.1.0"
authors = ["Cecilia Carneiro <cecilia.carneiroesilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.23"
cfg-if = "0.1.2"

[dependencies.wasm-bindgen]
version = "0.2.46"
features = ["nightly"]

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]

# This crate provides better debugging of panic by logging
# them with `console.error`. This is great for development,
# but require all the `std::fmt` and `std::panicking` infrastructure,
# so isn't great for code size when deploying.
[dependencies.console_error_panic_hook]
version = "0.1.1"
optional = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console',
  'Performance',
]
